--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#services">What We Offer</a></li>
-            <li><a href="#impact">Our Impact</a></li>
+            <li><a href="#initiatives">Our Impact</a></li>
             <li><a href="#partners">Partners</a></li>
             <li><a href="#get-involved">Get Involved</a></li>
             <li><a href="#contact">Contact</a></li>
