update logo and nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#hero">Home</a></li>
             <li><a href="#mission">Mission</a></li>
             <li><a href="#services">What We Offer</a></li>
-            <li><a href="#initiatives">Our Impact</a></li>
+            <li><a href="#guide">Resources</a></li>
             <li><a href="#partners">Partners</a></li>
             <li><a href="#get-involved">Get Involved</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -40,7 +40,7 @@
             <!-- Mission Section -->
             <div class="mission">
                 <h2>Our Mission</h2>
-                <p>We are an initiative dedicated to supporting individuals affected by Traumatic Brain Injuries (TBI). Our mission is to bridge gaps in care through community engagement, personalized rehabilitation, and academic and career support. We focus on community reintegration, life skills development, and raising awareness about the challenges faced by TBI survivors. By fostering collaboration and providing tailored resources, we strive to empower survivors to rebuild their lives with confidence and hope.</p>
+                <p>We are an initiative dedicated to supporting individuals affected by Acquired Brain Injuries (ABI). Our mission is to bridge gaps in care through community engagement, personalized rehabilitation, and academic and career support. We focus on community reintegration, life skills development, and raising awareness about the challenges faced by ABI survivors. By fostering collaboration and providing tailored resources, we strive to empower survivors to rebuild their lives with confidence and hope.</p>
             </div>
         </div>
     </section>
